// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top/right/bottom/left: bottom-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "bottom": {
      "setterCode": "setStyleBottom(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`top/right/bottom/left: bottom-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: bottom-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "bottom": {
      "setterCode": "setStyleBottom(50, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`top/right/bottom/left: bottom-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: bottom-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "bottom": {
      "setterCode": "setStyleBottom(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
  },
}
`;

exports[`top/right/bottom/left: bottom-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: left-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "left": {
      "setterCode": "setStyleLeft(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`top/right/bottom/left: left-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: left-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "left": {
      "setterCode": "setStyleLeft(50, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`top/right/bottom/left: left-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: left-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "left": {
      "setterCode": "setStyleLeft(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
  },
}
`;

exports[`top/right/bottom/left: left-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: right-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "right": {
      "setterCode": "setStyleRight(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`top/right/bottom/left: right-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: right-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "right": {
      "setterCode": "setStyleRight(50, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`top/right/bottom/left: right-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: right-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "right": {
      "setterCode": "setStyleRight(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
  },
}
`;

exports[`top/right/bottom/left: right-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: top-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "top": {
      "setterCode": "setStyleTop(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`top/right/bottom/left: top-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: top-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "top": {
      "setterCode": "setStyleTop(50, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`top/right/bottom/left: top-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`top/right/bottom/left: top-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "top": {
      "setterCode": "setStyleTop(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
  },
}
`;

exports[`top/right/bottom/left: top-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;
